--- a/my-app/index.html
+++ b/my-app/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>SONiC</title>
+    <link rel="icon" href="assets/sonic-logo.png" type="image/png">
   </head>
   <body>
     <div id="root"></div>
