--- a/my-app/index.html
+++ b/my-app/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>SONiC</title>
-    <link rel="icon" href="assets/sonic-logo.png" type="image/png">
+    <link rel="icon" href="/favicon.png" type="image/png" sizes="64x64" />
+
   </head>
   <body>
     <div id="root"></div>
